--- a/Practica3/login.html
+++ b/Practica3/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-image: url(./imagenes/marvel.jpg);
+            background-image: url(./imagenes/marvelbbys.jpg);
             padding: 0%;
             margin: 0%;
         }
@@ -28,7 +28,25 @@
             <a href="../Practica3/blog.html">Blog</a>
 
         </div>
-
+    </center>
+    <center>
+        <form action="">
+            <div>
+                <img src="./imagenes/descarga.png" alt="" style="width: 10rem; height:  10rem;">
+            </div>
+            <div>
+                <label><i>Iniciar sesion</i></label>
+            </div>
+            <div>
+                <input type="text" placeholder="Usuario"></div>
+            </div>
+            <div>
+                <input type="text" placeholder="******">
+            </div>
+            <div>
+                <button><a href="./index.html">Conectar</a></button>
+            </div>
+        </form>
 
     </center>
 </body>
