--- a/Practica3/blog.html
+++ b/Practica3/blog.html
@@ -16,6 +16,7 @@
             background-color: black;
             padding: .5rem;
         }
+    
         .parrafo1 {
             width: 50rem;
             text-align: left;
@@ -26,6 +27,28 @@
             width: 60rem;
             height: 40rem;
             display: inline-block;
+
+            animation-name: agrandamiento;
+            animation-duration: 5s;
+            animation-iteration-count: infinite;
+
+        }
+        .marvel {
+            color: brown;
+            font-size: 5rem;
+            margin: 0%;
+
+        }
+        @keyframes agrandamiento {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(.8);
+            }
+            100% {
+                transform: scale(1);
+            }
         }
     </style>
     <title>Document</title>
@@ -40,9 +63,10 @@
             <a href="../Practica3/blog.html">Blog</a>
 
         </div>
-        <h1>
-            MARVEL
+            <h1 class="marvel">
+            Marvel
         </h1>
+
     </center>
     <img src="./imagenes/ironmanblog.jpg" alt="" class="ironman">
         <div class="parrafo1">
